--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.Page {
-  background: rgb(255, 216, 233);
-  background: radial-gradient(
-    circle,
-    rgba(255, 216, 233, 1) 0%,
-    rgba(164, 206, 255, 1) 100%
-  );
+@layer base {
+  body {
+    @apply font-body;
+    @apply bg-primary;
+  }
 }
